Version Unreleased (TBD)
- Remove duplicate tags from Intel window (first row) and change font color (adjustable in `data/config/tag_data.json`).


Version 3.2.1 (2025.04.04)
- Fix market intel when using Group By Star System method.
- Update the game dependency to 0.98a-RC7.


Version 3.2.0 (2025.04.02)
- Update mod to Starsector 0.98a-RC5.


Version 3.1.3 (2023.06.17)
- Filter out "Unique" admin skill added by Tahlan Shipworks mod from Admin skills preview in Query builder and results.
- Add merging CSV support for filtering more skills from Admin skills preview in Query builder and results.


Version 3.1.2 (2023.06.10)
- Add back Special Contact from Nexerelin to Contacts Board (accidentally removed in 3.1.0).
- Fix crash on Exploration intel filtering (NPE if any intel returned `null` tags).
- Fix D-Mod count filtering in Market query maker.


Version 3.1.1 (2023.06.09)
- Correctly initialize Stelnet on a fresh game or save. Stelnet would fail to initialize when starting a New Game or Loading a Game from Main Menu.


Version 3.1.0 (2023.06.08)
New features:
- Move setting handling from `stelnet.json` file to LunaLib. Requires LunaLib.
- Add Exploration tab mini-board that allows intel filtering. Works on intel added by CaptainsLog (will show additional filters).
- Add option to use Codex entry lists in query builder (default is to use known lists from visible factions).
- Add option for Commodities, Contacts, and Market modules to only work when within Comms range.
- Disallow remote calling contacts which have missions in progress. Can be disabled, allowing to call anyone anytime.

Improvements:
- Show admin skills in a tooltip (Query and Results).
- Remove suspended, developing, and lost contacts from Contacts board.
- Disable Black Market from Market Queries and Viewer by default (configurable via LunaSettings).

Bugfixes:
- Fix Sebestyen not showing up in contacts.
- Add missing Lion Guard ships (reskins) in query builder.