@@ -1,5 +1,6 @@
 Version Unreleased (TBD)
-- Remove duplicate tags from Intel window (first row) and change font color (adjustable in `data/config/tag_data.json`).
+- Fix for modded contacts that can wipe out player's fleet when calling them remotely while they do not want to talk with the player.
+  Instead, a dialog window will be displayed that will disappear immediately.
 
 
 Version 3.2.1 (2025.04.04)
